# SideQuestGST

./: .env.template  .gitignore  Cargo.toml  README.md  credentials.json  docker-compose.yml
.github/workflows/: ci-cd.yml
bot-gateway/: Cargo.toml  dockerfile
bot-gateway/src/: api.rs  cache.rs  kafka.rs  main.rs  models.rs  security.rs
bot-gateway/src/commands/: admin.rs  config.rs  general.rs  list.rs  quest.rs  stats.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: Architecture.md
sheet-worker/: Cargo.toml  dockerfile
sheet-worker/src/: main.rs  models.rs  sheets.rs
