[package]
name = "gst-quest-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Asynchronous Runtime
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }

# Discord Framework
poise = "0.6" 
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "collector" ]} # Poise 0.6 uses Serenity 0.12

# Kafka Client
# "cmake-build" ensures librdkafka is built from source within the container
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Serialization & Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }

google-sheets4 = "5.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["http1", "http2", "tls12"] }
futures-util = "0.3.31"

common = { path = "../common" }
axum = "0.8.7"
redis = { version = "0.32.7", features = ["aio"] }
