[package]
name = "gst-sheet-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }

# Kafka Client
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Google Sheets API
google-sheets4 = "5.0"

# Serialization & Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

common = { path = "../common" }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
